// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterCounter should handle null value 1`] = `
<DocumentFragment>
  .c0 {
  color: #d6d8da;
  position: absolute;
  top: 1px;
  bottom: 1px;
  right: 1px;
  padding: 0.5em;
  background: white;
}

<span
    class="c0"
  >
    25
  </span>
</DocumentFragment>
`;

exports[`CharacterCounter should render 1`] = `
<DocumentFragment>
  .c0 {
  color: #d6d8da;
  position: absolute;
  top: 1px;
  bottom: 1px;
  right: 1px;
  padding: 0.5em;
  background: white;
}

<span
    class="c0"
    value="FooBar"
  >
    19
  </span>
</DocumentFragment>
`;
